--- a/css/index.css
+++ b/css/index.css
@@ -131,6 +131,31 @@ p {
     margin: 25px 0;
 }
 
+#topDiv
+{
+    margin: 20px;
+}
+
+#bottomDiv
+{
+    margin: 20px;
+}
+
+#aboutJumbo
+{
+    margin-top: 25px;
+}
+
+section
+{
+    display: flex;
+}
+
+.columnDiv div
+{
+    margin: 15px;
+}
+
 header
 {
     width: 100%;
@@ -139,7 +164,7 @@ header
 header nav ul
 {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: baseline;
 }
 
@@ -166,4 +191,9 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+hr
+{
+    border-top: 1px dotted grey;
 }
