--- a/css/index.css
+++ b/css/index.css
@@ -88,6 +88,8 @@ p {
 .middle-content {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+    display: flex;
+    flex-flow: column wrap;
 }
 
 .middle-content h2 {
